--- a/.gitignore
+++ b/.gitignore
@@ -10,20 +10,25 @@ node_modules/
 /.next/
 /out/
 
-# Production
+# Production builds
 /build
+
+# Environment files
+.env
+.env.local
+.env.development
+.env.test
+.env.production
 
 # Misc
 .DS_Store
 *.pem
 
-# Debug
+# Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# Local env files
-.env*.local
+logs/
 
 # Vercel
 .vercel
