--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
-NEXT_PUBLIC_BACKEND_URL=https://backend-muliti-ai-chatbot-75dt.vercel.app
+NEXT_PUBLIC_BACKEND_URL=https://backend-muliti-ai-chatbot-75dt.vercel.app/api/v1
 NEXT_PUBLIC_APP_NAME=MultiAI Chatbot
 NEXT_PUBLIC_APP_VERSION=1.0.0
+
